# Niloticus

./: CMakeLists.txt  README.md  main.cpp  niloticus.config.json
cmake/: antara.cmake  compiler_targets.cmake
cmd/server/: main.cpp
cmd/worker/: main.cpp
src/niloticus/application/: app.cpp  app.hpp  server.application.cpp  server.application.hpp  worker.app.cpp  worker.app.hpp
src/niloticus/base/: base.cpp  base.hpp
src/niloticus/config/: coins.config.json.cpp  coins.config.json.hpp  coins.type.hpp  config.json.cpp  config.json.hpp
src/niloticus/log/: logging.cpp  logging.hpp  server.logging.hpp
src/niloticus/models/: tickers.hpp
src/niloticus/services/markets/coingecko/: coingecko.price.cpp  coingecko.price.hpp  coingecko.service.cpp  coingecko.service.hpp
tests/base/: base.tests.cpp
tests/config/: coins.config.tests.cpp  config.tests.cpp
tests/config/config_samples/: coins.cfg.json
tests/logging/: logging.tests.cpp
tests/services/markets/: coingecko.services.tests.cpp
tests/services/markets/market_samples/: coingecko_simple_price_call.json  coingecko_simple_price_call_with_last_update.json
